# freddiehd

./: Makefile  README.md  pyproject.toml  pytest.ini
polls/: models.py  tests.py  views.py
polls/migrations/: 0001_initial.py
polls/templates/polls/: index.html
polls/tests/: test_models.py  test_views.py  utils.py
project/: settings.py  urls.py
