[tool.poetry]
name = "freddiehd"
version = "0.1.0"
description = ""
authors = ["Rikki Hodder <rikkih@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0"
python-dotenv = "^0.19.2"
mypy = "^0.930"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.12b0"
mypy = "^0.930"
ipdb = "^0.13.9"
ipython = "^7.30.1"
django-stubs = "^1.9.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
pytest-django = "^4.5.2"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "project.settings"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
